<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- app name -->
    <string name="app_name">Xiaomi TWS Service</string>

    <!-- Service activity start -->
    <string name="tws_service_title">Xiaomi TWS Service</string>
    <string name="tws_service_system_integration_disabled">System Integration Disabled</string>
    <string name="tws_service_system_integration_disabled_summary">All Xiaomi TWS system integration is disabled</string>
    <string name="tws_service_device_list">Device List</string>

    <string name="tws_service_category_function">Function</string>
    <string name="tws_service_enable_battery_notification">Enable Battery Notification</string>
    <string name="tws_service_enable_battery_notification_summary">Send notification when earbuds status changes</string>

    <string name="tws_service_category_system">System</string>
    <string name="tws_service_enable_system_integration">Enable System Integration</string>
    <string name="tws_service_enable_system_integration_summary">When disabled, all TWS related functions will be turned off, including TWS status detection, battery reporting and device config. Restart required to take effect</string>
    <string name="tws_service_auto_connect_device">Auto Connect to Earbuds</string>
    <string name="tws_service_auto_connect_device_summary">Automatically connect to paired earbuds when media is playing</string>
    <string name="tws_service_auto_switch_device">Auto Switch Device</string>
    <string name="tws_service_auto_switch_device_summary">Switch audio to phone when both earbuds are removed, switch to earbuds when either one is worn</string>
    <string name="tws_service_enable_notification">Enable Notification</string>
    <string name="tws_service_enable_notification_summary">Send notification when status changes</string>
    <string name="tws_service_enable_ble_scan">Enable BLE Scan</string>
    <!-- Service activity end -->

    <!-- Device list activity start -->
    <string name="device_list_title">Xiaomi TWS</string>
    <string name="device_list_category">Device List</string>
    <string name="device_list_device_disconnected">Disconnected</string>
    <string name="device_list_device_connected">Connected</string>
    <string name="device_list_device_nearby">Nearby, not bonded</string>
    <string name="device_list_device_nearby_bonded">Nearby, not connected</string>
    <string name="device_list_empty">No Device Found</string>
    <string name="device_list_empty_summary">Make sure your TWS are paired and connected</string>
    <!-- Device list activity end -->

    <!-- Device config activity start -->
    <string name="device_config_title">Device Configuration</string>

    <string name="device_config_general">General</string>
    <string name="device_config_noise_cancellation_mode">Noise Cancellation Mode</string>
    <string name="device_config_gestures">Gestures</string>
    <string name="device_config_multi_devices">Multi Devices</string>
    <string name="device_config_advanced">Advanced</string>

    <string name="equalizer_mode">Equalizer mode</string>
    <string name="equalizer_mode_default">Default</string>
    <string name="equalizer_mode_vocal_enhance">Vocal enhance</string>
    <string name="equalizer_mode_bass_boost">Bass boost</string>
    <string name="equalizer_mode_treble_boost">Treble boost</string>
    <string name="equalizer_mode_volume_boost">Volume boost</string>
    <string name="equalizer_mode_custom">Custom</string>
    <string name="equalizer_mode_classic">Classic</string>
    <string name="equalizer_mode_legendary">Legendary</string>
    <string name="equalizer_mode_soothing_boost">Soothing Boost</string>
    <string name="equalizer_mode_harman">Harman</string>
    <string name="equalizer_mode_harman_master">Harman Master</string>
    <string name="equalizer_mode_standard">Standard</string>
    <string name="equalizer_mode_outdoor">Outdoor</string>
    <string name="equalizer_mode_under_water">Under Water</string>
    <string name="equalizer_mode_balanced_listening">Balanced Listening</string>

    <string name="spatializer_audio">Spatializer Audio</string>
    <string name="spatializer_audio_off">Off</string>
    <string name="spatializer_audio_on">On</string>
    <string name="spatializer_audio_head_tracking">Head Tracking</string>

    <string name="noise_cancellation_mode">Noise cancellation mode</string>
    <string name="noise_cancellation_mode_off">Off</string>
    <string name="noise_cancellation_mode_on">On</string>
    <string name="noise_cancellation_mode_transparency">Transparency</string>
    <string name="noise_cancellation_mode_left">Left Button Control</string>
    <string name="noise_cancellation_mode_right">Right Button Control</string>

    <string name="single_click_left">Single Click Left Ear</string>
    <string name="single_click_right">Single Click Right Ear</string>
    <string name="double_click_left">Double Click Left Ear</string>
    <string name="double_click_right">Double Click Right Ear</string>
    <string name="treble_click_left">Triple Click Left Ear</string>
    <string name="treble_click_right">Triple Click Right Ear</string>
    <string name="long_press_left">Long Press Left Ear</string>
    <string name="long_press_right">Long Press Right Ear</string>
    <string name="swipe_left">Swipe Left Ear</string>
    <string name="swipe_right">Swipe Right Ear</string>
    <string name="function_disabled">Disabled</string>
    <string name="function_voice_assistant">Voice Assistant</string>
    <string name="function_play_pause">Play/Pause</string>
    <string name="function_previous_track">Previous Track</string>
    <string name="function_next_track">Next Track</string>
    <string name="function_volume_up">Volume Up</string>
    <string name="function_volume_down">Volume Down</string>
    <string name="function_noise_control">Switch Noise Control</string>
    <string name="function_screenshot">Screenshot</string>
    <string name="function_volume_control">Volume Control</string>

    <string name="find_earbuds">Find Earbuds</string>
    <string name="find_earbuds_off">Tap to Find, the earbuds will play a sound (Please make sure the earbuds are not in your ears)</string>
    <string name="find_earbuds_on">The earbuds are playing a sound</string>

    <string name="multi_connect">Multi Connect</string>
    <string name="multi_connect_summary">Multiple devices can be connected to earbuds simultaneously</string>

    <string name="allow_switch_device">Allow other devices to connect</string>
    <string name="allow_switch_device_summary">Allow other paired devices to take over this earbuds connection</string>

    <string name="device_info">Device Info</string>

    <string name="serial_number">Serial number</string>

    <string name="device_config_footer_tips">Headset may not support certain functions</string>
    <!-- Device config activity end -->

    <!-- Auto connect device activity start -->
    <string name="auto_connect_device_title">Auto Connect to Earbuds</string>
    <string name="auto_connect_device_summary">Automatically connect to paired earbuds when media is playing</string>
    <string name="auto_connect_device_list">Available Devices</string>
    <string name="auto_connect_device_empty">No Supported Device Found</string>
    <string name="auto_connect_device_footer_tips">Paired earbuds that support auto connect will appear here</string>
    <!-- Auto connect device activity end -->

    <!-- Auto switch device activity start -->
    <string name="auto_switch_device_title">Auto Switch Media Device</string>
    <string name="auto_switch_device_summary">Switch audio to phone when both earbuds are removed, switch to earbuds when either one is worn</string>
    <string name="auto_switch_device_list">Available Devices</string>
    <string name="auto_switch_device_empty">No Supported Device Found</string>
    <string name="auto_switch_device_footer_tips">Paired earbuds that support auto switch will appear here</string>
    <!-- Auto switch device activity start -->

    <!-- Notification start -->
    <string name="notification_channel_device_info">Device Info</string>
    <!-- Notification end -->

</resources>
