<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:persistent="false"
    android:title="@string/earbuds_settings_title">

    <PreferenceCategory
        android:key="general"
        android:title="@string/earbuds_settings_general">

        <ListPreference
            android:key="equalizer_mode"
            android:title="@string/equalizer_mode"
            app:controller="org.lineageos.xiaomi_tws.configs.EqualizerModeController" />

        <SwitchPreferenceCompat
            android:key="enable_auto_switch_device"
            android:summary="@string/auto_switch_device_summary"
            android:title="@string/auto_switch_device"
            app:controller="org.lineageos.xiaomi_tws.configs.AutoSwitchDeviceController" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="noise_cancellation_mode"
        android:title="@string/noise_cancellation_mode">

        <ListPreference
            android:key="switch_noise_cancellation_mode"
            android:title="@string/noise_cancellation_mode"
            app:controller="org.lineageos.xiaomi_tws.configs.NoiseCancellationModeController" />

        <MultiSelectListPreference
            android:key="left_noise_cancellation_mode"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:title="@string/noise_cancellation_mode_left"
            app:controller="org.lineageos.xiaomi_tws.configs.NoiseCancellationListController" />

        <MultiSelectListPreference
            android:key="right_noise_cancellation_mode"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:title="@string/noise_cancellation_mode_right"
            app:controller="org.lineageos.xiaomi_tws.configs.NoiseCancellationListController" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="gestures"
        android:title="@string/earbuds_settings_gestures"
        app:initialExpandedChildrenCount="2">

        <ListPreference
            android:key="single_click_left"
            android:title="@string/single_click_left"
            app:controller="org.lineageos.xiaomi_tws.configs.ButtonController" />

        <ListPreference
            android:key="single_click_right"
            android:title="@string/single_click_right"
            app:controller="org.lineageos.xiaomi_tws.configs.ButtonController" />

        <ListPreference
            android:key="double_click_left"
            android:title="@string/double_click_left"
            app:controller="org.lineageos.xiaomi_tws.configs.ButtonController" />

        <ListPreference
            android:key="double_click_right"
            android:title="@string/double_click_right"
            app:controller="org.lineageos.xiaomi_tws.configs.ButtonController" />

        <ListPreference
            android:key="treble_click_left"
            android:title="@string/treble_click_left"
            app:controller="org.lineageos.xiaomi_tws.configs.ButtonController" />

        <ListPreference
            android:key="treble_click_right"
            android:title="@string/treble_click_right"
            app:controller="org.lineageos.xiaomi_tws.configs.ButtonController" />

        <ListPreference
            android:key="long_press_left"
            android:title="@string/long_press_left"
            app:controller="org.lineageos.xiaomi_tws.configs.ButtonController" />

        <ListPreference
            android:key="long_press_right"
            android:title="@string/long_press_right"
            app:controller="org.lineageos.xiaomi_tws.configs.ButtonController" />

        <ListPreference
            android:key="swipe_left"
            android:title="@string/swipe_left"
            app:controller="org.lineageos.xiaomi_tws.configs.ButtonController"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="swipe_right"
            android:title="@string/swipe_right"
            app:controller="org.lineageos.xiaomi_tws.configs.ButtonController"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="multi_devices"
        android:title="@string/earbuds_settings_multi_devices">

        <SwitchPreferenceCompat
            android:key="multi_connect"
            android:summary="@string/multi_connect_summary"
            android:title="@string/multi_connect"
            app:controller="org.lineageos.xiaomi_tws.configs.MultiConnectController" />

        <SwitchPreferenceCompat
            android:key="allow_switch_device"
            android:summary="@string/allow_switch_device_summary"
            android:title="@string/allow_switch_device"
            app:controller="org.lineageos.xiaomi_tws.configs.AllowSwitchDeviceController" />

        <SwitchPreferenceCompat
            android:dependency="allow_switch_device"
            android:key="auto_connect_device"
            android:summary="@string/auto_connect_device_summary"
            android:title="@string/auto_connect_device"
            app:controller="org.lineageos.xiaomi_tws.configs.AutoConnectDeviceController" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="advanced"
        android:title="@string/earbuds_settings_advanced">

        <SwitchPreferenceCompat
            android:key="find_earbuds"
            android:summaryOff="@string/find_earbuds_off"
            android:summaryOn="@string/find_earbuds_on"
            android:title="@string/find_earbuds"
            app:controller="org.lineageos.xiaomi_tws.configs.FindEarbudsController" />

        <Preference
            android:key="device_info"
            android:title="@string/device_info"
            app:controller="org.lineageos.xiaomi_tws.configs.DeviceInfoController"
            app:enableCopying="true" />

        <Preference
            android:key="serial_number"
            android:title="@string/serial_number"
            app:controller="org.lineageos.xiaomi_tws.configs.SerialNumberController"
            app:enableCopying="true" />

    </PreferenceCategory>

    <com.android.settingslib.widget.FooterPreference
        android:key="footer_tips"
        android:selectable="false"
        android:title="@string/settings_footer_tips" />

</PreferenceScreen>
